added delete function

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"description":"Katzen essen","completed":true},{"description":"Kekse","completed":true}]
+[{"description":"Rust lernen","completed":false},{"description":"Python lernen","completed":false}]
